--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,14 @@ html {
   scroll-behavior: smooth;
 }
 
+
+/* Hide the scrollbar but allow scrolling */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
